--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,20 @@
 {
+  "name": "frontend",
+  "version": "0.0.1",
   "private": true,
+  "engines": {
+    "yarn": "1.22.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typescript": "^4.5.5"
   }
 }
