--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "node": "16.x",
     "yarn": "1.22.x"
   },
+  "scripts": {
+    "lint-branch-name": "yarn branch-name-lint .branchnamelintrc.json"
+  },
   "workspaces": [
     "backend",
     "frontend"
@@ -12,6 +15,12 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "branch-name-lint": "^2.1.1",
     "husky": "^7.0.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn branch-name-lint .branchnamelintrc.json"
+    }
   }
 }
