--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "yarn": "1.22.x"
   },
   "scripts": {
-    "lint-branch-name": "yarn branch-name-lint .branchnamelintrc.json"
+    "lint-branch-name": "yarn branch-name-lint .branchnamelintrc.json",
+    "prettier": "yarn prettier --write .",
+    "prepare": "husky install"
   },
   "workspaces": [
     "backend",
@@ -16,11 +18,16 @@
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
     "branch-name-lint": "^2.1.1",
-    "husky": "^7.0.4"
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4"
   },
   "husky": {
     "hooks": {
       "pre-push": "yarn branch-name-lint .branchnamelintrc.json"
     }
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
