feat(mon-14): commitizen implement

--- a/.prettierignore
+++ b/.prettierignore
@@ -3,3 +3,9 @@ coverage
 node_modules/*
 /idea
 frontend/.next/*
+.nvmrc
+yarn.lock
+backend/.nvmrc
+.husky/prepare-commit-message
+.czrc
+.prettierignore
