--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,24 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "overrides": [
+    {
+      "files": "**/*.svx",
+      "options": {
+        "parser": "markdown"
+      }
+    },
+    {
+      "files": "**/*.ts",
+      "options": {
+        "parser": "typescript"
+      }
+    },
+    {
+      "files": "**/CHANGELOG.md",
+      "options": {
+        "requirePragma": true
+      }
+    }
+  ]
 }
