--- a/package.json
+++ b/package.json
@@ -8,26 +8,37 @@
   "scripts": {
     "lint-branch-name": "yarn branch-name-lint .branchnamelintrc.json",
     "prettier": "yarn prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "cz"
+  },
+  "dependencies": {
+    "commitizen": "^4.2.4"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
+    "branch-name-lint": "^2.1.1",
+    "cz-emoji": "^1.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4"
   },
   "workspaces": [
     "backend",
     "frontend"
   ],
-  "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "branch-name-lint": "^2.1.1",
-    "eslint-config-prettier": "^8.3.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.4"
-  },
   "husky": {
     "hooks": {
-      "pre-push": "yarn branch-name-lint .branchnamelintrc.json"
+      "pre-push": "yarn branch-name-lint .branchnamelintrc.json",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
